# simple-equation-solver

./: .gitignore  .travis.yml  CMakeLists.txt  ParseGenerator.cmake  README.md
.github/workflows/: build.yml
includes/: .gitignore  SES_Answer.hpp  SES_Solution.hpp  SES_Solver.hpp  SES_SolverData.hpp  SES_Variable.hpp  utilities.hpp
srcs/: CMakeLists.txt  SES_Solution.cpp  SES_Solver.cpp  SES_SolverData.cpp  SES_Variable.cpp  main.cpp  utilities.cpp
srcs/Parse/: .gitignore  CMakeLists.txt  Grammar.yacc  Lexer.lex  ParseGenerator.cmake
srcs/SolverLib/: SES_Solver.cpp  SES_SolverData.cpp  SES_Variable.cpp  utilities.cpp
srcs/SolverLib/Parse/: Grammar.yacc  Lexer.lex
tests/: CMakeLists.txt  Check_List_Subject_Tests.cpp  Common_Parse_Simplify_Tests.cpp  Custom_Sqrt_Tests.cpp  SES_SolverData_Add_Sub_Expression_Tests.cpp  SES_Variable_Mult_Div_Constructor_Tests.cpp  Subject_Checklist_Tests.cpp  Subject_Tests.cpp
